@@ -1,0 +1,18 @@
+<p>
+<%= render :partial => 'public/target_summary' %>
+</p>
+<p>
+  <%= EasyFormat.format(@target.notes) %>
+</p>
+<h2>Results</h2>
+<div>
+<% if @target.results.size < 1 -%>
+  No results yet
+<% else -%>
+  <ul>
+<%   for result in @target.results -%>
+    <li><%= public_link_result(result) -%></li>
+<%   end -%>
+  </ul>
+<% end -%>
+</div>
