@@ -1,9 +1,10 @@
 <div>
   <table class="bordered">
     <tr class="header">
+      <td rowspan="2">&nbsp;</td>
       <td rowspan="2">Who</td>
       <td colspan="4">Target</td>
-      <td colspan="5">Last Result</td>
+      <td colspan="6">Last Result</td>
     </tr>
     <tr class="header">
       <td>Arch</td>
@@ -15,22 +16,25 @@
       <td>Expe</td>
       <td>Fail</td>
       <td>Err</td>
+      <td>More</td>
     </tr>
 <% for target in Target.find(:all) -%>
     <tr>
+      <td><%= public_link_target(target) %></td>
       <td><%= link_profile(target.creator) %></td>
       <td><%=h target.arch %></td>
       <td><%=h target.os %></td>
       <td><%=h target.impl %> <%=h target.impl_branch %></td>
       <td><%=h target.spec_version %></td>
 <% if target.last_result.nil? -%>
-      <td colspan="5">&nbsp;</td>
+      <td colspan="6">&nbsp;</td>
 <% else -%>
       <td><%=h target.last_result.files_count %></td>
       <td><%=h target.last_result.examples_count %></td>
       <td title="Expectations"><%=h target.last_result.expectations_count %></td>
       <td><%=h target.last_result.failures_count %></td>
       <td><%=h target.last_result.errors_count %></td>
+      <td><%= public_link_result(target.last_result) %></td>
 <% end -%>
     </tr>
 <% end -%>
